tests/snapshots/failures_displays__invalid_rule.snap
---
source: tests/failures_displays.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m <input>:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mF[0m[38;5;249mo[0m[38;5;249mo[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249mA[0m[38;5;249m|[0m[38;5;201m;[0m
 [38;5;240m  │[0m         [38;5;201m┬[0m  
 [38;5;240m  │[0m         [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m Rule ending here did not parse successfully
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: The parse stack looked like this (most recent on top):
 [38;5;240m  │[0m       └─0: UnparsedOperator [1:8..1:9]
 [38;5;240m  │[0m         │  └─ Terminator
 [38;5;240m  │[0m         1: UnparsedOperator [1:7..1:8]
 [38;5;240m  │[0m         │  └─ Alternation
 [38;5;240m  │[0m         2: Nonterminal [1:6..1:7]
 [38;5;240m  │[0m         │  └─ A
 [38;5;240m  │[0m         3: UnparsedOperator [1:4..1:5]
 [38;5;240m  │[0m         │  └─ Equals
 [38;5;240m  │[0m         4: Nonterminal [1:0..1:3]
 [38;5;240m  │[0m            └─ Foo
[38;5;246m───╯[0m
