tests/snapshots/failures_displays__invalid_start-5.snap
---
source: tests/failures_displays.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m <input>:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;155m#[0m[38;5;155m'[0m[38;5;155ma[0m[38;5;155ma[0m[38;5;155ma[0m[38;5;155m'[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249mA[0m[38;5;201m;[0m
 [38;5;240m  │[0m [38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m┬[0m[38;5;155m─[0m[38;5;155m─[0m    [38;5;201m┬[0m  
 [38;5;240m  │[0m    [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m Expected identifier, found Regex
 [38;5;240m  │[0m           [38;5;201m│[0m  
 [38;5;240m  │[0m           [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m Rule ending here did not parse successfully
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mNote[0m: The parse stack looked like this (most recent on top):
 [38;5;240m  │[0m       └─0: UnparsedOperator [1:10..1:11]
 [38;5;240m  │[0m         │  └─ Terminator
 [38;5;240m  │[0m         1: Nonterminal [1:9..1:10]
 [38;5;240m  │[0m         │  └─ A
 [38;5;240m  │[0m         2: UnparsedOperator [1:7..1:8]
 [38;5;240m  │[0m         │  └─ Equals
 [38;5;240m  │[0m         3: Regex [1:0..1:6]
 [38;5;240m  │[0m            └─ aaa
[38;5;246m───╯[0m
