tests/snapshots/failures_displays__invalid_start-7.snap
---
source: tests/failures_displays.rs
expression: err
---
[31mError:[0m Parse error: Unexpected end of input at index 8
